# spark-df-compare

./: README.md  comparison_with_classic_spark.md  pyproject.toml
pyspark_diff_tool/: comparison.py  main.py
